# CCP-Clearinghouse

./: .env.example  .gitignore  Dockerfile.base  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml  run_demo.py
.github/workflows/: ci.yml
migrations/: alembic.ini  env.py
migrations/versions/: 001_create_roles.py  002_create_members.py  003_create_instruments.py  004_create_accounts_and_ledger.py  005_create_trades_and_positions.py  006_create_margin_tables.py  007_create_netting_tables.py  008_create_settlement_tables.py  009_create_outbox.py  010_create_state_transitions.py  011_create_price_feeds.py  012_create_default_waterfall.py  013_immutability_triggers.py  014_balance_validation_triggers.py  015_derived_balance_views.py  016_create_indexes.py  (+6 more)
scripts/: health-check.py  init-db.sh  query-topics.py  seed-members.py
services/outbox-publisher/: Dockerfile  pyproject.toml
services/outbox-publisher/src/outbox_publisher/: main.py  publisher.py
shared/: pyproject.toml
shared/src/ccp_shared/: __init__.py  auth.py  config.py  enums.py  errors.py  idempotency.py  trace.py
shared/src/ccp_shared/chain/: __init__.py  base.py  ethereum.py  registry.py  stubs.py
shared/src/ccp_shared/db/: __init__.py  connection.py  readonly.py  transactions.py
shared/src/ccp_shared/kafka/: __init__.py  consumer.py  outbox.py  producer.py
shared/src/ccp_shared/models/: __init__.py  instrument.py  journal.py  margin.py  member.py  trade.py
shared/src/ccp_shared/signing/: __init__.py  client.py  types.py
tests/: conftest.py
(+75 files in other folders)
