[project]
name = "ccp-shared"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary]>=3.2",
    "confluent-kafka>=2.6",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "alembic>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccp_shared"]
