[project]
name = "outbox-publisher"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ccp-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outbox_publisher"]
